fixed alignment on fullscreen settings buttons

--- a/app/elements/crm-app/crm-app.css
+++ b/app/elements/crm-app/crm-app.css
@@ -1113,7 +1113,7 @@ paper-checkbox {
 }
 
 #fullscreenEditorSettings {
-	margin-top: -2px;
+	margin-top: -3px;
 }
 
 .paper-material {
